<resources>
    <string name="app_name">HW4</string>
    <string name="search_text">search Text</string>
    <string name="AppBar_title">Личности</string>

    <string name="Name_example">Наполеон Бонапарт</string>
    <string name="Dates_example">1769 – 1821</string>
    <string name="Info_example">император французов (фр. Empereur des Français) в 1804—1814 и 1815 годах, полководец и государственный деятель</string>
    <string name="Sex_example">Мужчина</string>
    <string name="Desc_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis sodales suscipit. Cras porta mi at dictum ultrices. In tempor elit nunc, et dapibus neque tempus vel. Curabitur non consectetur mi, ac tristique augue. Etiam consectetur nisl et commodo maximus. Vestibulum pharetra ex sit amet erat venenatis semper. Donec non ullamcorper velit. Vestibulum massa orci, pulvinar sed orci non, iaculis consectetur purus. Suspendisse luctus augue rhoncus commodo convallis. Cras id fermentum ex. Aenean eros libero, consequat ut odio non, semper finibus orci. In feugiat diam vel lectus lobortis, sit amet finibus mauris pulvinar. Aliquam non est a felis tincidunt hendrerit.

Vestibulum mollis ultrices tellus vel fringilla. Morbi iaculis urna quis tellus venenatis, malesuada ultrices orci pretium. Nulla aliquet augue sit amet erat elementum molestie. Suspendisse semper rutrum ornare. Cras nec erat et tellus sagittis ultrices. Nunc ornare luctus ultrices. Sed lacinia sed justo ut porttitor. Nullam ut mauris finibus, congue dui id, sollicitudin tortor. Etiam erat diam, lacinia vel nulla sed, volutpat porta ipsum. Aliquam venenatis eros ut turpis scelerisque mattis. Nunc euismod, odio ac mattis dictum, nibh mauris fringilla nunc, vel malesuada enim velit at augue. Vivamus nec pharetra orci, id finibus mauris. Etiam eget porta purus. Quisque ut consectetur justo. Curabitur a vulputate augue. Suspendisse tincidunt nisl placerat feugiat condimentum.

Sed placerat metus vulputate nisi mollis, non interdum purus interdum. Nullam lacinia, nunc ut consectetur sodales, justo eros rhoncus odio, nec ornare orci lectus id dui. Proin non magna ac velit egestas facilisis sit amet tincidunt ligula. Pellentesque sed elit quis eros iaculis faucibus in luctus nisi. Sed tortor metus, pretium nec auctor nec, tincidunt nec nibh. In non neque sodales, ultrices justo a, vestibulum tortor. Integer magna orci, bibendum non dui ac, eleifend congue ipsum. Vestibulum volutpat arcu nec bibendum aliquam. Nullam varius accumsan ex, et tempor nibh finibus ac. Aliquam sodales sapien vitae risus feugiat ullamcorper. Nunc venenatis libero eu tristique facilisis. Nulla facilisi. In at nunc justo.

Morbi viverra ante ac ipsum consequat egestas. Vivamus porttitor felis et justo viverra, nec mollis diam condimentum. Duis a nisl congue, tempus dui at, vestibulum est. Donec tristique, est ut bibendum fermentum, tortor nisi bibendum libero, a pretium velit quam at libero. Aliquam congue lorem at condimentum placerat. Maecenas at elementum quam. Praesent vitae elit nisl. Cras orci tortor, lobortis eget interdum nec, varius vehicula risus. Nam ante purus, feugiat et dictum ac, facilisis sed ex. Praesent id libero id nisl laoreet congue. Etiam sagittis nunc in posuere pretium. Duis ut malesuada est. Nam vel nisi non mi condimentum malesuada. In nec faucibus ligula.</string>
</resources>