<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/item_margin">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardId"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/item_margin_2x">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/item_margin_2x">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_avatar"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"

                app:layout_constraintEnd_toStartOf="@id/item_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_margin_2x"
                android:text="@string/Name_example"
                android:textAppearance="?attr/textAppearanceTitleMedium"

                app:layout_constraintStart_toEndOf="@id/image_avatar"
                app:layout_constraintTop_toTopOf="@id/image_avatar" />

            <TextView
                android:id="@+id/item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dates_example"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="?android:attr/textColorHint"

                app:layout_constraintStart_toStartOf="@id/item_name"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <TextView
                android:id="@+id/item_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_2x"
                android:ellipsize="end"
                android:lines="3"
                android:maxLines="3"
                android:scrollHorizontally="true"
                android:text="@string/Info_example"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_avatar" />

            <TextView
                android:id="@+id/item_gender_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin"
                android:text="@string/Sex_example"
                android:textAppearance="?attr/textAppearanceOverline"
                android:textColor="?android:attr/textColorLink"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_information" />

            <Button
                android:id="@+id/button_like"
                android:layout_width="@dimen/button_like_size"
                android:layout_height="@dimen/button_like_size"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/ic_thumb_up"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_information" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>